# 65EP2405

./: README.md  db.sqlite3  main.py  pyproject.toml
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_detallelibro_libro_alter_autor_options_and_more.py
core/: settings.py  urls.py  views.py
libros/: apps.py  urls.py  views.py
libros/migrations/: 0001_initial.py
libros/templates/libros/: list.html
templates/: base.html
templates/registration/: login.html  logout.html
